--- a/OficinaMecanica/Views/Estimates/Create.cshtml
+++ b/OficinaMecanica/Views/Estimates/Create.cshtml
@@ -34,7 +34,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Value" class="control-label"></label>
-                <input asp-for="Value" class="form-control" />
+                <input asp-for="Value" type="number" step="0.01" class="form-control" />
                 <span asp-validation-for="Value" class="text-danger"></span>
             </div>
             <div class="form-group">
